# crypto-portfolio-agent

./: README.md  docker-compose.yml  pyproject.toml  test_fetch.sh  test_risk_profile.py
agent/: .env.example  .gitignore  API.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.py
agent/src/: backend_client.py  config.py  models.py  wrapper.py
agent/src/agent/: models.py  prompt.py
agent/src/agent/tools/: base.py  historical_data.py  reasoning_step.py  risk_profile.py
agent/src/api/: routes.py  service.py
agent/src/queue/: worker.py
agent/src/storage/: chat_store.py
backend/: Dockerfile  GRAPH_API_IMPLEMENTATION.md  pyproject.toml  test_graph_endpoint.py
backend/src/: api.py  models.py  utils.py
backend/src/analysis/: aggregated_stats.py  graph.py  metrics.py  valuation.py
front/: BOARD_IMPLEMENTATION.md  Dockerfile  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
front/app/: layout.tsx  page.tsx
front/components/: board.tsx  chat-bubble.tsx  chat-config-status.tsx  chat.tsx  dashboard.tsx  sidebar.tsx  thinking-indicator.tsx
front/components/charts/: alert-cards.tsx  delta-gauge.tsx  performance-chart.tsx  risk-pie-chart.tsx  sensitivity-chart.tsx
front/components/ui/: scroll-area.tsx
front/hooks/: use-chat-detail.ts  use-chat-list.ts  use-graph.ts
front/lib/: api-client.ts  date-utils.ts  types.ts
front/reference/: package.json
src/: api.py  config.py  database.py  models.py  scheduler.py
src/analysis/: data_service.py  metrics.py  riskprofile.py  scenarios.py  valuation.py
src/fetch/: dune_client.py  lending.py
(+1 files in other folders)
