[project]
name = "crypto-portfolio-agent"
version = "1.0.0"
description = "Crypto Portfolio Risk Advisor Agent API"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.18.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.5.0",
    "redis>=5.0.0",
    "rq>=1.15.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
